--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Josh Burman</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/images/favicon2.ico">
     </head>
 
     <body>
