--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         
-        <div class="jumbotron text-center">
+        <div class="jumbotron text-center" id="title1">
             <h1>Josh Burman</h1>
             <p>A Page to tell you about me</p> 
         </div>
