--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         
         <div class="container">
         <div class="row">
+            <!--
             <div class="col-sm-4">
             <h3>Column 1</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
@@ -32,10 +33,11 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
             </div>
-            <div class="col-sm-4">
-            <h3>Column 3</h3>        
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            -->
+            <div class="col-sm-12 text-center">
+            <h3>Update!</h3>        
+            <p>Currently I'm working on the first version of my site</p>
+            <p>Will be up in 5-1000 business days</p>
             </div>
         </div>
         </div>
